# AminoAcids

./: .bashrc  .gitconfig  .pymoltimestamp  .python_history  .viminfo  .zcompdump  .zprofile  .zsh_history  .zshrc  README.md  butterfly.py  cleanup_failed.sdf  import pandas as pd copy.py  import pandas as pd.py  pyproject.toml
Sankey/: dataset.py
