[tool.poetry]
name = "data analysis"
version = "0.1.0"
description = ""
authors = ["York Xu <cpuxuyue@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
plotly = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
